Added Basic Service Page, Written Services Rule, Hidden Access to Certain Directory/Files

--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,10 @@ RewriteCond %{REQUEST_FILENAME}\.inc.php -f
 RewriteRule ^404  404.inc.php [NC]
 RewriteRule ^404.  404.inc.php
 
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^services  services.php [NC]
+RewriteRule ^services.  services.php
 
 
 
