--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,15 @@
 RewriteEngine on
 
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^hello home?nt [NC] 
-RewriteRule ^hello. home?nt 
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}/.php !-f
+RewriteRule ^home index.php [NC,L] 
+RewriteRule ^home. index.php [NC,L]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}/.php !-f
-RewriteRule ^home index.php [NC] 
-RewriteRule ^home. index.php [NC] 
-RewriteRule ^home?i index.php?not_found [NC] 
+RewriteRule ^home?ne index.php?ne [NC,L] 
 
-# RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteCond %{REQUEST_FILENAME} -f
-# RewriteRule ^ index.php?not_found [NC] 
-# RewriteRule ^. index.php [NC] 
-# RewriteRule ^home?id index.php?id [NC] 
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^about about.php [NC]
+RewriteRule ^about. about.php  
